--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@ body {
 
 body {
   background-color: #000;
-  background-image: url("../images/background.jpg");
+  background-image: url("../images/background.png");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
