--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -14,6 +14,8 @@
       </div>
     {{end}}
   </div>
+<small>All opinions expressed in this blog are my own and might not necessarily reflect
+   those of my employer(s).</small>
 </footer>
 
 <script src="{{ "assets/main.js" | absURL }}"></script>
