--- a/themes/hello-friend-ng/layouts/index.html
+++ b/themes/hello-friend-ng/layouts/index.html
@@ -7,7 +7,7 @@
 
             <h1>{{ .Site.Title }}</h1>
             {{- with .Site.Params.homeSubtitle }}
-                <p>{{.}}</p>
+               <p>{{.}} at <a href="https://www.contxtful.com">Contxtful</a></p>
             {{- end }}
 
             {{- with .Site.Params.social }}
