--- a/themes/hello-friend-ng/layouts/posts/single.html
+++ b/themes/hello-friend-ng/layouts/posts/single.html
@@ -22,6 +22,21 @@
         <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
       </h1>
 
+      {{ with .Params.Description }}
+        <div class="post-excerpt">{{ . }}</div>
+      {{ end }}
+
+      {{ if .Params.Cover }}
+        <figure class="post-cover">
+
+           <center><img src="{{ .Params.Cover | absURL }}" alt="{{ .Title }}" /></center>
+          
+          {{ if .Params.CoverCaption }}
+            <figcaption class="center">{{ .Params.CoverCaption | markdownify }}</figcaption>
+          {{ end }}
+        </figure>
+      {{ end }}
+
       {{- if .Params.toc }}
         <hr />
         <aside id="toc">
@@ -30,10 +45,6 @@
         </aside>
         <hr />
       {{- end }}
-
-      {{ with .Params.Cover }}
-        <img src="/{{ . }}" class="post-cover" />
-      {{ end }}
 
       <div class="post-content">
         {{ .Content }}
@@ -138,6 +149,11 @@
           {{ template "_internal/disqus.html" . }}
         </div>
       {{ end }}
+    {{ end }}
+
+    {{ if .Site.Params.CommentoUrl }}
+      <script defer src={{ .Site.Params.CommentoUrl }}></script>
+      <div id="commento"></div>
     {{ end }}
 
   </main>
