--- a/themes/hello-friend-ng/assets/scss/main.scss
+++ b/themes/hello-friend-ng/assets/scss/main.scss
@@ -15,27 +15,4 @@
 @import "single";
 @import "footer";
 @import "sharing-buttons";
-
-table {
-  table-layout: fixed;
-  border-collapse: collapse;
-  width: 100%;
-  margin: 40px 0;
-  border-radius: 5px;
-}
-
-table, th, td {
-  border: 1px solid;
-  padding: 10px;
-}
-
-th {
-  background: var(--background-secondary);
-}
-
-hr {
-  width: 100%;
-  border: none;
-  background: var(--border-color);
-  height: 1px;
-}
+@import "tables";
