--- a/themes/hello-friend-ng/layouts/_default/baseof.html
+++ b/themes/hello-friend-ng/layouts/_default/baseof.html
@@ -4,7 +4,10 @@
         {{ partial "head.html" . }}
     </head>
 
-    <body class="{{ if ne $.Site.Params.defaultTheme "light" -}} dark-theme {{- end -}}">
+    {{ block "body" . }}
+        <body class="{{ if ne $.Site.Params.defaultTheme "light" -}} dark-theme {{- end -}}">
+    {{ end }}
+    
         <div class="container">
             {{ partial "header.html" . }}
 
