--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -33,7 +33,7 @@
 {{ end }}
 
 <!-- Icons -->
-{{- partial "favicons.html" . }}
+{{- partial "favicon.html" . }}
 
 {{ template "_internal/schema.html" . }}
 {{ template "_internal/twitter_cards.html" . }}
