--- a/random-thoughts/themes/dimension/layouts/partials/design.html
+++ b/random-thoughts/themes/dimension/layouts/partials/design.html
@@ -1,4 +1,4 @@
 <!-- Design -->
 <footer id="footer">
-    <p class="copyright">&copy; Design: <a href="https://github.com/d-asnaghi">d-asnaghi</a> and <a href="https://html5up.net">HTML5 UP</a>.</p>
+    <p class="copyright">&copy; Félix Léger 2021-<script>document.write(new Date().getFullYear())</script></p>
 </footer>
