--- a/themes/hello-friend-ng/layouts/partials/footer.html
+++ b/themes/hello-friend-ng/layouts/partials/footer.html
@@ -8,9 +8,9 @@
         </div>
     </div>
     <div class="footer__inner">
-        <div class="footer__content">
-            <span>{{ .Site.Params.footerLeft | default "Powered by <a href=\"http://gohugo.io\">Hugo</a>" | safeHTML }}</span>
-            <span>{{ .Site.Params.footerRight | default "Made with &#10084; by <a href=\"https://github.com/rhazdon\">Djordje Atlialp</a>" | safeHTML }}</span>
-          </div>
+        <!--div class="footer__content">
+            <span>{{ .Site.Params.footerLeft | safeHTML }}</span>
+            <span>{{ .Site.Params.footerRight | safeHTML }}</span>
+          </div-->
     </div>
 </footer>
