--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,8 +20,8 @@
                 </div>
             {{- end }}
         </div>
-        <h2>Featured Posts</h2>
-          {{ range first 10 (where site.RegularPages "Type" "featured")}}
+        <h1>Featured Posts</h1>
+          {{ range where .Site.Pages "Params.featured" "true" }}
           <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a><br>
           {{ end }}
 
