--- a/layouts/tome5/list.html
+++ b/layouts/tome5/list.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
     {{ $paginator := .Paginate .Data.Pages }}
-    
+
     <main class="posts">
-        <h1>{{ .Title }} test</h1>
+        <h1>Les Chroniques d'une vie ordinaire (Tome 5)</h1>
 
         {{ if .Content }}
             <div class="content">{{ .Content }}</div>
