--- a/themes/hello-friend-ng/layouts/_default/list.html
+++ b/themes/hello-friend-ng/layouts/_default/list.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
     {{ $paginator := .Paginate .Data.Pages }}
-    
+
     <main class="posts">
-        <h1>{{ .Title }} test</h1>
+        <h1>{{ .Title }}</h1>
 
         {{ if .Content }}
             <div class="content">{{ .Content }}</div>
