bullet on featured posts
Former-commit-id: 614e16d2e9d04a549aa169544730408c652f32e7

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,9 +21,11 @@
             {{- end }}
         </div>
         <h1>Featured Posts</h1>
+          <ul>
           {{ range where .Site.Pages "Params.featured" "true" }}
-          <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a><br>
+          <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
           {{ end }}
+          </ul>
 
     </main>
 {{ end }}
