overhaul featured, limit front page to latest 13
Former-commit-id: 5ece8e2613a699abcb8bcb74d3033f62fb68b812

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,9 +20,9 @@
                 </div>
             {{- end }}
         </div>
-        <h1>Featured Posts</h1>
+        <h1>Latest Featured Posts</h1>
           <ul>
-          {{ range where .Site.Pages "Params.featured" "true" }}
+          {{ range first 13 (where .Site.Pages "Params.featured" "true") }}
           <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
           {{ end }}
           </ul>
