--- a/themes/hello-friend-ng/layouts/partials/header.html
+++ b/themes/hello-friend-ng/layouts/partials/header.html
@@ -16,4 +16,7 @@
             <span class="theme-toggle unselectable">{{ partial "theme-icon.html" . }}</span>
         </span>
     </span>
+    <style type="text/css">
+    A:hover { COLOR: #FF8A00; TEXT-DECORATION: none; font-weight: none }
+    </style>
 </header>
