--- a/themes/hello-friend-ng/layouts/partials/header.html
+++ b/themes/hello-friend-ng/layouts/partials/header.html
@@ -5,15 +5,15 @@
         <span class="header__right">
             {{ if len .Site.Menus }}
                 {{ partial "menu.html" . }}
-                <span class="menu-trigger">
+                <a><span class="menu-trigger">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                         <path d="M0 0h24v24H0z" fill="none"/>
                         <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
                     </svg>
-                </span>
+                </span></a>
             {{ end }}
 
-            <span class="theme-toggle unselectable">{{ partial "theme-icon.html" . }}</span>
+            <a><span class="theme-toggle unselectable">{{ partial "theme-icon.html" . }}</span></a>
         </span>
     </span>
     <style type="text/css">
