--- a/layouts/tome5/single.html
+++ b/layouts/tome5/single.html
@@ -3,7 +3,7 @@
 
     <article>
       <h1 class="post-title">
-        <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
+        {{ .Title | markdownify }}
       </h1>
 
       {{ with .Params.Description }}
