fix front page featured list length and bullet points
Former-commit-id: 71f8d430fdcbc4c0c430e20f4dc648be908993c3

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,9 +21,11 @@
             {{- end }}
         </div>
         <h1><a href="tags/featured" style="text-decoration:none">Latest Featured Posts</a></h1>
-          {{ range first 12 (where .Site.Pages "Params.featured" "true") }}
-          <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a><br>
+          <ul>
+          {{ range first 10 (where .Site.Pages "Params.featured" "true") }}
+          <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
           {{ end }}
+          </ul>
           <p style="color:#4d4d4d"><a href="tags/featured">(Full list)</a></p>
 
     </main>
