--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,9 +20,9 @@
                 </div>
             {{- end }}
         </div>
-        <h1><a href="tags/featured" style="text-decoration:none">Latest Featured Posts</a></h1>
+        <h1><a href="tags/featured" style="text-decoration:none">Featured Posts</a></h1>
           <ul>
-          {{ range first 10 (where .Site.Pages "Params.featured" "true") }}
+          {{ range (where .Site.Pages "Params.frontpage" "true") }}
           <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
           {{ end }}
           </ul>
