overcoming learning anxiety
Former-commit-id: 6be5b1c84eff090cb463e2192f00e3d1581abbfd

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,11 +21,9 @@
             {{- end }}
         </div>
         <h1><a href="tags/featured" style="text-decoration:none">Featured Posts</a></h1>
-          <ul>
           {{ range (where .Site.Pages "Params.frontpage" "true") }}
-          <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a></li>
+          <a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a><br>
           {{ end }}
-          </ul>
           <p style="color:#4d4d4d"><a href="tags/featured">(Full list)</a></p>
 
     </main>
