--- a/layouts/partials/svg.html
+++ b/layouts/partials/svg.html
@@ -121,6 +121,10 @@
   <circle cx="12" cy="12" r="12"/>
   <path d="M0,12 a1,1 0 0,0 24,0" fill="currentColor" />
 </svg>
+{{- else if (eq .name "bandcamp") -}}
+<center><img src="img/bandcamp-edited.svg" width="48"
+                                                      /></center>
 {{- else if (eq .name "my highscores") -}}
-<center><img src="/img/arcade-icon.png" height="50px"></img></center>
+<center><img src="/img/arcade-icon.png" height="48px"></img></center>
 {{- end -}}
+
