add cv link, remove lists link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,10 @@
                 <p>{{.}}</p>
             {{- end }}
 
+            <p>I am currently open to work. Have a look at <a
+            href="/cv">my CV</a>!</p>
+            <br>
+
             {{- with .Site.Params.social }}
                 <div>
                     {{ partial "social-icons.html" . }}
