--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,9 +14,9 @@
                 <p>{{.}}</p>
             {{- end }}
 
-            <p>I am currently open to work. Have a look at <a
+            <!--p>I am currently open to work. Have a look at <a
             href="/cv">my CV</a>!</p>
-            <br>
+            <br-->
 
             {{- with .Site.Params.social }}
                 <div>
