--- a/layouts/tome5/single.html
+++ b/layouts/tome5/single.html
@@ -7,7 +7,7 @@
       </h1>
 
       {{ with .Params.Description }}
-        <div class="post-excerpt">{{ . }}</div>
+        <div class="post-excerpt">{{ . | markdownify | safeHTML}}</div>
       {{ end }}
 
       {{ if .Params.Cover }}
