update bookcount to count /reads

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,7 @@
 
         </div>
 
-        {{ $bookCount := len (where .Site.RegularPages "Section" "books") }}
+        {{ $bookCount := len (where .Site.RegularPages "Section" "reads") }}
         <a href="/books"><p>{{ $bookCount }} books explored, and
                         the journey continues!</p></a>
 
