--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,7 +27,7 @@
         </div>
 
         {{ $bookCount := len (where .Site.RegularPages "Section" "reads") }}
-        <a href="/books"><p>{{ $bookCount }} books explored, and
+        <a href="/books"><p>{{ $bookCount }} reads completed, and
                         the journey continues!</p></a>
 
 
