--- a/layouts/shortcodes/myrating.html
+++ b/layouts/shortcodes/myrating.html
@@ -1,4 +1,3 @@
 {{ if .Get "rating" }}
-<h1><center><a href="/ratings-explained">Félix rating:<br>{{ .Get
-      "rating" }}</a></center></h1>
+<h1><center><a href="/ratings-explained">Félix rating:<br>{{ .Get "rating" }}</a></center></h1>
 {{ end }}
