--- a/layouts/shortcodes/buythisbook.html
+++ b/layouts/shortcodes/buythisbook.html
@@ -1,3 +1,3 @@
 {{ if .Get "link" }}
-<a href="{{ .Get "link" }}">Buy this book</a> (note: affiliate link)
+<p><a href="{{ .Get "link" }}">Buy this book</a> (note: affiliate link)</p>
 {{ end }}
