--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,6 +17,6 @@
         </span>
     </span>
     <style type="text/css">
-    A:hover { COLOR: #ffdf00; background-color: black; TEXT-DECORATION: none; font-weight: none }
+    A:hover { COLOR: #ffdf00; TEXT-DECORATION: none; font-weight: bold}
     </style>
 </header>
