--- a/layouts/partials/svg.html
+++ b/layouts/partials/svg.html
@@ -125,32 +125,7 @@
 {{- else if (eq .name "bandcamp") -}}
 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M0 18.75l7.437-13.5H24l-7.438 13.5H0z"/></svg>
 {{- else if (eq .name "highscores") -}}
-<!--svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-  viewBox="0 0 24 24"><g fill="none" stroke="currentColor"
-  stroke-width="1.5"><path d="M11 8.5L9.8 9l-7.448 3.386a.6.6 0 0
-  0-.352.546v.136a.6.6 0 0 0 .352.546l8.82 4.01a2 2 0 0 0 1.656
-  0l8.82-4.01a.6.6 0 0 0 .352-.546v-.136a.6.6 0 0 0-.352-.546L14.2 9L13
-  8.5"/><path d="M22 13v4.112a.6.6 0 0 1-.354.547l-8.825 3.972a2 2 0 0
-      1-1.642 0l-8.825-3.972A.6.6 0 0 1 2 17.112V13"/><path
-                                                          stroke-linecap="round"
-                                                          stroke-linejoin="round"
-                                                          d="M12 8a3 3 0
-                                                             1 1 0-6a3 3
-                                                             0 0 1 0
-                                                             6Z"/><path
-                                                                      d="M11
-                                                                         8v5a1
-                                                                         1
-                                                                         0
-                                                                         1
-                                                                         0
-                                                                         2
-                                                                         0V8"/><path
-                                                                                   stroke-linecap="round"
-                                                                                   stroke-linejoin="round"
-                                                                                   d="M16
-                                                                                      13h1"/></g></svg-->
-<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="15" cy="13" r="1" fill="currentColor"/><circle cx="17" cy="11" r="1" fill="currentColor"/><path fill="currentColor" d="M10 9H8v2H6v2h2v2h2v-2h2v-2h-2z"/><path fill="currentColor" d="M15 5H9a7 7 0 0 0-7 7a7 7 0 0 0 7 7h6a7 7 0 0 0 7-7a7 7 0 0 0-7-7zm0 12H9A5 5 0 1 1 9 7h6a5 5 0 1 1 0 10z"/></svg>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32"><path fill="currentColor" d="M9 3h1c.55 0 1 .45 1 1v1.43c0 .31-.26.57-.57.57H9c-.55 0-1-.45-1-1V4c0-.55.45-1 1-1m2.99 26.03H13c.55 0 1-.45 1-1v-1c0-.55-.45-1-1-1h-2.43c-.31 0-.57.26-.57.57v.44c0 1.1.89 1.99 1.99 1.99m6.01-2v1c0 .55.45 1 1 1h1.03c1.09 0 1.97-.88 1.97-1.97v-.46a.57.57 0 0 0-.57-.57H19c-.55 0-1 .45-1 1M24 5V4c0-.55-.45-1-1-1h-1c-.55 0-1 .45-1 1v1.43c0 .31.26.57.57.57H23c.55 0 1-.45 1-1m4 6.03c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1h-.43a.57.57 0 0 0-.57.57v.46c0 1.09-.88 1.97-1.97 1.97h-.46a.57.57 0 0 0-.57.57v4.44c0 1.1-.89 1.99-1.99 1.99h-.44a.57.57 0 0 1-.57-.57V22.6a.57.57 0 0 0-.57-.57H10.57a.57.57 0 0 0-.57.57v2.86c0 .31-.25.57-.57.57H9c-1.1 0-2-.9-2-2V19.6c0-.31-.26-.57-.57-.57H6c-1.1 0-2-.9-2-2v-.43c0-.31-.26-.57-.57-.57H3c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1h.03c.55 0 1 .45 1 1v1.43c0 .32.25.57.57.57l1.8-.01c.3-.01.56-.22.6-.51c.24-1.81 1.71-3.22 3.53-3.45c.27-.03.47-.28.47-.56V6.57c0-.31.26-.57.58-.57h.3C13.05 6 14 6.95 14 8.12v.34c0 .32.26.57.57.57h2.86c.31 0 .57-.25.57-.57v-.39C18 6.93 18.93 6 20.07 6h.36c.31 0 .57.26.57.57V8.5c0 .28.2.53.47.56c1.82.22 3.27 1.64 3.5 3.46c.04.3.3.51.6.51h1.86c.31 0 .57-.25.57-.57zM11 17a1 1 0 0 0 1-1.018v-1.964c0-.565-.446-1.018-1-1.018c-.555 0-1 .453-1 1.018v1.964c0 .565.445 1.018 1 1.018m9-1.018c0 .565.445 1.018 1 1.018c.555 0 1-.463 1-1.018v-1.964c0-.565-.445-1.018-1-1.018c-.555 0-1 .453-1 1.018z"/></svg>
 {{- else if (eq .name "threads") -}}
 <svg role="img" viewBox="0 0 24 24" width="24" height="24"
   xmlns="http://www.w3.org/2000/svg"><title>Threads</title><path
