--- a/layouts/shortcodes/mynotes.html
+++ b/layouts/shortcodes/mynotes.html
@@ -1,3 +1,3 @@
 {{ if .Get "link" }}
-<p><a href="{{ .Get "link" }}">Link to my handwritten notes</a></p>
+<p><a href="{{ .Get "link" }}" target="_blank">Link to my handwritten notes</a></p>
 {{ end }}
