add a bunch of people

--- a/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/styles.css
+++ b/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/styles.css
@@ -8,10 +8,12 @@ body {
 }
 
 #photo {
-    max-width: 80%;
-    max-height: 80%;
-    display: block;
-    margin: 0 auto;
+  max-width: 500px; /* Set maximum width */
+  max-height: 500px; /* Set maximum height */
+  width: auto; /* Maintain aspect ratio */
+  height: auto; /* Maintain aspect ratio */
+  display: block;
+  margin: 0 auto;
 }
 
 #buttons {
