--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -131,7 +131,7 @@
   
   .bookshelf {
     width: 100%;
-    height: 320px;
+    height: 100%;
     margin-top: 32px;
     display: flex;
     flex-wrap: wrap;
@@ -141,7 +141,7 @@
   
   .book {
     width: 50px;
-    height: 280px;
+    height: 320px;
     position: relative;
     margin-left: 5px;
     top: 30px;
