replace author by number in bookshelf

--- a/layouts/shortcodes/bookshelf.html
+++ b/layouts/shortcodes/bookshelf.html
@@ -9,7 +9,7 @@
     <div class="side spine" style="background-color:{{ .color }};">
       <span class="spine-title"> {{.title | truncate 30 }} </span>
          <span class="spine-author">
-           {{ .author }}
+           {{ .number }}
          </span>
     </div>
     <div class="side top"></div>
