--- a/layouts/shortcodes/bookshelf.html
+++ b/layouts/shortcodes/bookshelf.html
@@ -1,5 +1,5 @@
 {{ $js := resources.Get "js/bookshelf.js" }}
-{{ $css := resources.Get "css/custom.css" }}
+{{ $css := resources.Get "css/bookshelf.css" }}
 <link rel="stylesheet" href="{{ $css.RelPermalink }}" />
 <script src="{{ $js.RelPermalink }}" type="module"></script>
 
