--- a/layouts/reads/list.html
+++ b/layouts/reads/list.html
@@ -5,6 +5,7 @@
         <h1>{{ .Title }}</h1>
 
         <p><a href="/bookshelf">Click here for bookshelf view</a></p>
+        <p><a href="/bookmosaic">Click here for mosaic view</a></p>
 
         {{ if .Content }}
             <div class="content">{{ .Content }}</div>
