--- a/layouts/shortcodes/bookshelf.html
+++ b/layouts/shortcodes/bookshelf.html
@@ -7,8 +7,9 @@
   {{ range.Page.Params.bookshelf_item }}
   <div class="book">
     <div class="side spine" style="background-color:{{ .color }};">
-      <span class="spine-title"> {{.title | truncate 40 }} </span>
+       <span class="spine-title">{{.title | truncate 25 }}</span>
          <span class="spine-author">
+           {{ .rating }} <br>
            {{ .number }}
          </span>
     </div>
