Bookshelf: make the spines color and pattern correpond to year and date the review was published

--- a/layouts/shortcodes/bookshelf.html
+++ b/layouts/shortcodes/bookshelf.html
@@ -6,7 +6,7 @@
 <div class="bookshelf">
   {{ range.Page.Params.bookshelf_item }}
   <div class="book">
-    <div class="side spine" style="background-color:{{ .color }};">
+     <div class="side spine" data-custom-param="{{.date}}">
        <span class="spine-title">{{.title }}</span>
          <span class="spine-author">
            {{ .rating }} <br>
