limit sur la taille des images dans un post

--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -29,7 +29,9 @@
       {{ if .Params.Cover }}
         <figure class="post-cover">
 
-           <center><img src="{{ .Params.Cover | absURL }}" alt="{{ .Title }}" /></center>
+           <center><img src="{{ .Params.Cover | absURL }}" alt="{{
+                             .Title }}" style="max-height: 600px; width:
+                                       auto; height: auto;"/></center>
 
           {{ if .Params.CoverCaption }}
             <figcaption class="center">{{ .Params.CoverCaption | markdownify }}</figcaption>
