--- a/layouts/reads/single.html
+++ b/layouts/reads/single.html
@@ -46,7 +46,7 @@
         <hr />
       {{- end }}
 
-      <div class="post-content">
+      <div class="post-content" style="text-align: justify">
         {{ .Content }}
       </div>
     </article>
