publish letters on ethics

--- a/layouts/shortcodes/buythisbook.html
+++ b/layouts/shortcodes/buythisbook.html
@@ -1,3 +1,4 @@
 {{ if .Get "link" }}
-<p><a href="{{ .Get "link" }}" target="_blank">Buy this book</a> (note: affiliate link)</p>
+<p><a href="{{ .Get "link" }}" target="_blank">Buy this book</a>
+<!--(note: affiliate link)--></p>
 {{ end }}
