--- a/layouts/shortcodes/achetezcelivre.html
+++ b/layouts/shortcodes/achetezcelivre.html
@@ -1,4 +1,4 @@
 {{ if .Get "link" }}
 <p><a href="{{ .Get "link" }}" target="_blank">Achetez ce livre</a>
-(note: lien affilié)</p>
+<!--(note: lien affilié)--></p>
 {{ end }}
