--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,7 +29,8 @@
                         the journey continues!</p></a>
             <div>
             <center>
-            <a href="https://felx.cc/ola-store" target="_blank"><img src="/img/reads/overcoming-learning-anxiety.jpg"
+            <a href="https://felx.cc/ola-store" target="_blank"><img
+            src="/img/overcoming-learning-anxiety-cover.png"
                       style="display:inline;width:200px; border: 2px solid black"></a> <a href="/star-quotes" target="_blank">
             <img src="/img/reads/star-quotes.png"
                  style="display:inline;width:200px;
