--- a/layouts/shortcodes/bookshelf.html
+++ b/layouts/shortcodes/bookshelf.html
@@ -16,7 +16,7 @@
    </div>
    {{ else }}
    <div class="side spine" data-custom-param="{{.date}}">
-       <span class="spine-title">{{.title }}</span>
+       <span class="spine-title">{{.title | truncate 60}}</span>
          <span class="spine-author">
            {{ .rating }} <br>
            {{ .number }}
