--- a/layouts/shortcodes/mesnotes.html
+++ b/layouts/shortcodes/mesnotes.html
@@ -1,3 +1,3 @@
 {{ if .Get "link" }}
-<p><a href="{{ .Get "link" }}" target="_blank">Lien vers mes notes numérisées</a></p>
+<p><a href="{{ .Get "link" }}" target="_blank">Lien vers mes notes manuscrites numérisées</a></p>
 {{ end }}
